k8s/nginx-deployment.yml
# nginx-pv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-world
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello-world
  template:
    metadata:
      labels:
        app: nginx-hello-world
    spec:
      containers:
      - name: nginx
        image: acraksclusternginx.azurecr.io/my-nginx:latest
        ports:
        - containerPort: 80
        # - containerPort: 443
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        persistentVolumeClaim:
          claimName: nginx-html-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ingress-basic
spec:
  selector:
    app: nginx-hello-world
  ports:
    - name: http  # Added name for port 80
      protocol: TCP
      port: 80
      targetPort: 80
    # - name: https  # Added name for port 443
    #   protocol: TCP
    #   port: 443
    #   targetPort: 443
  type: ClusterIP
